fix skill gap

--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -12,8 +12,8 @@
   
   .skills-container .skills-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px;
   }
   
   .skills-container .skills-grid .skill {
